--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.input {
+		@apply rounded-md border border-gray-300 px-2 py-1 outline-none focus:border-amaranth-300 focus:ring-2 focus:ring-amaranth-300;
+	}
+
+	.link {
+		@apply cursor-pointer font-semibold text-amaranth-500 underline underline-offset-2 outline-none hover:text-amaranth-400 focus:ring-2
+		focus:ring-amaranth-300 focus:ring-offset-2 active:text-amaranth-300;
+	}
+
+	.required::after {
+		content: '*';
+		color: theme('colors.red.500');
+		margin-left: theme('spacing.1');
+	}
+}
