feat: file upload WIP

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -23,4 +23,9 @@
 		color: theme('colors.red.500');
 		margin-left: theme('spacing.1');
 	}
+
+	.btn {
+		@apply rounded-md bg-amaranth-600 px-3 py-1 font-semibold
+				text-white outline-none hover:bg-amaranth-700 focus:ring-2 focus:ring-amaranth-300 active:bg-amaranth-800;
+	}
 }
